--- a/production/Lochy_Promki/scenes/start.fxml
+++ b/production/Lochy_Promki/scenes/start.fxml
@@ -7,12 +7,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="400.0" prefWidth="600.0"  stylesheets="@../style/start.css"
-      xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.Controller">
+      prefHeight="400.0" prefWidth="600.0" stylesheets="@../style/start.css"
+      xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="scenes.ControllerStart">
     <children>
-        <Text id="text" fx:id="text" lineSpacing="4.0" text="" textAlignment="CENTER" />
-        <TextField id="input" fx:id="input" alignment="CENTER" disable="true" maxWidth="-Infinity" prefWidth="330.0" promptText="Wpisz imię..."/>
+        <Text id="text" fx:id="text" lineSpacing="4.0" text="" textAlignment="CENTER"/>
+        <TextField id="input" fx:id="input" alignment="CENTER" disable="true" maxWidth="-Infinity" prefWidth="330.0"
+                   promptText="Wpisz imię..."/>
         <Button id="startBtn" fx:id="loginBtn" onAction="#loginBtnClicked" mnemonicParsing="false"
-                 text="Zacznij podróż..." />
+                text="Zacznij podróż..."/>
     </children>
 </VBox>
